Make item tabs responsive: hide image on mobile, fix selector
- Hide tab images on screens <= 768px using breakpoints.down("md")
- Fix CSS selector from > .image-wrapper to > .image to match
  the actual HTML structure in tabs-inner.html
- Tab links already support wrapping via flex-wrap: wrap

--- a/src/css/tabs.scss
+++ b/src/css/tabs.scss
@@ -1,3 +1,5 @@
+@use "breakpoints";
+
 #tabs {
   margin: 2rem 0;
 
@@ -28,9 +30,13 @@
       display: flex;
     }
 
-    > .image-wrapper {
+    > .image {
       flex-shrink: 0;
       max-width: 387px;
+
+      @include breakpoints.down("md") {
+        display: none;
+      }
     }
 
     > div {
